# BVC-with-OpenVDB

./: CMakeLists.txt  main.cpp
BVC/: BVC_geometry.cpp  BVC_geometry.h  boundary.cpp  boundary.h  volumetric_cell.cpp  volumetric_cell.h
